--- a/src/XFood.Web/Pages/User/Profile.razor
+++ b/src/XFood.Web/Pages/User/Profile.razor
@@ -1,4 +1,5 @@
 ﻿@page "/user/{UserId:int}"
+@attribute [Authorize]
 @using XFoodBlazor.Web.Client.Services.Check_List.GetList
 @using XFoodBlazor.Web.Client.Services.Check_List
 @inject ICheckService CheckService
