--- a/src/XFood.Web/Pages/Autorization/Login.razor
+++ b/src/XFood.Web/Pages/Autorization/Login.razor
@@ -61,7 +61,7 @@
 
         if (result.IsSuccess)
         {
-            NavigationManager.NavigateTo("/");
+            NavigationManager.NavigateTo("/", forceLoad: true);
         }
         else
         {
