--- a/src/XFood.Web/Pages/Check-List/CheckWork.razor
+++ b/src/XFood.Web/Pages/Check-List/CheckWork.razor
@@ -1,4 +1,5 @@
 ﻿@page "/checkWork/{ManagerId:int}"
+@attribute [Authorize]
 @using XFoodBlazor.Web.Client.Services.CheckListCriteria.SetPoints;
 @using XFoodBlazor.Web.Client.Services.Check_List.SetTotalPoints;
 @using XFoodBlazor.Web.Client.Services.CheckListCriteria;
