--- a/src/XFood.Web/Pages/Pizzeria/Create.razor
+++ b/src/XFood.Web/Pages/Pizzeria/Create.razor
@@ -1,4 +1,5 @@
 @page "/pizzerias/create"
+@attribute [Authorize(Roles = "admin")]
 @using XFoodBlazor.Web.Client.Services.Pizzeria.Create
 @using XFoodBlazor.Web.Client.Services.Pizzeria
 @inject IPizzeriaService PizzeriaService
