--- a/src/XFood.Web/Pages/Pizzeria/Pizzerias.razor
+++ b/src/XFood.Web/Pages/Pizzeria/Pizzerias.razor
@@ -1,4 +1,5 @@
 ﻿@page "/pizzerias"
+@attribute [Authorize(Roles = "admin, user")]
 @using XFoodBlazor.Web.Client.Services.Pizzeria.GetList
 @using XFoodBlazor.Web.Client.Services.Pizzeria
 @inject IPizzeriaService PizzeriaService
