--- a/src/XFood.Web/Shared/NavMenu.razor
+++ b/src/XFood.Web/Shared/NavMenu.razor
@@ -8,6 +8,9 @@
                 <NavLink class="nav-link" href="stats">
                     Общая статистика
                 </NavLink>
+                <NavLink class="nav-link" href="managers">
+                    Менеджеры
+                </NavLink>
                 <div class="text-center time-zones p-2">
                     <p>МСК: @currentMoscowTime</p>
                     <p>ЕКТ: @currentYekaterinburgTime</p>
